--- a/parsing_2.ipynb
+++ b/parsing_2.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
      "output_type": "stream",
      "text": [
       "Мядельский ['54.5232', '26.5619']\n",
-      "['54.5232', '26.5619']\n"
+      "(54.5232, 26.5619)\n"
      ]
     }
    ],
@@ -39,7 +39,7 @@
     "def get_district_details(district_name):\n",
     "    service = Service(executable_path=r'/usr/bin/chromedriver')\n",
     "    options = webdriver.ChromeOptions()\n",
-    "    #options.add_argument('--headless') #It allows users to run automated scripts in headless mode, meaning that the browser window wouldn’t be visible. \n",
+    "    options.add_argument('--headless') #It allows users to run automated scripts in headless mode, meaning that the browser window wouldn’t be visible. \n",
     "    driver = webdriver.Chrome(service=service, options=options)\n",
     "    url = 'https://google.com'#\"https://realt.by/sale/dachi/?page=1\"\n",
     "    headers = ({'User-Agent':'Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:124.0) Gecko/20100101 Firefox/124.0', 'Accept-Language':'en-US, en;q=0.5'})\n",
@@ -62,9 +62,9 @@
     "    \n",
     "    driver.quit()\n",
     "    print(district_name, result)\n",
-    "    return result\n",
+    "    return (float(result[0]), float(result[1]))\n",
     "\n",
-    "print(get_district_details('Мядельский'))\n"
+    "#print(get_district_details('Мядельский'))\n"
    ]
   }
  ],
