--- a/parsing_2.ipynb
+++ b/parsing_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,18 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Мядельский ['54.5232', '26.5619']\n",
-      "(54.5232, 26.5619)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_district_details(district_name):\n",
     "    service = Service(executable_path=r'/usr/bin/chromedriver')\n",
@@ -47,24 +38,60 @@
     "    time.sleep(1)\n",
     "    #input_box = WebDriverWait(driver, 1).until(EC.element_to_be_clickable((By.CSS_SELECTOR, \"textarea\")))\n",
     "    input_box = driver.find_element(By.CSS_SELECTOR, \"textarea\")\n",
-    "    input_box.send_keys(district_name +' район, Беларусь')\n",
+    "    input_box.send_keys(district_name)\n",
     "    input_box.send_keys(Keys.ENTER)\n",
     "    time.sleep(1)\n",
     "\n",
     "    wiki_link = driver.find_element(By.XPATH,\"//a[contains(@href, 'https://ru.wikipedia.org')]\")\n",
     "    wiki_link.click()\n",
     "\n",
-    "    soup = BeautifulSoup(driver.page_source, 'html.parser')\n",
-    "    result = soup.find(\"span\", class_='coordinates plainlinks nourlexpansion').find(\"a\").text\n",
-    "    result = re.findall(r\"(\\d{2}\\°\\d{2,}\\′*\\d*).\", result)\n",
-    "    result = [x.replace('°','.') for x in result]\n",
-    "    result = [x.replace('′','') for x in result]\n",
+    "    def get_soup(page):\n",
+    "        soup = BeautifulSoup(page, 'html.parser')\n",
+    "        res = soup.find(\"span\", class_='coordinates plainlinks nourlexpansion').find(\"a\").text\n",
+    "        res = re.findall(r\"(\\d{2}\\°\\d{2,}\\′*\\d*).\", res)\n",
+    "        res = [x.replace('°','.') for x in res]\n",
+    "        res = [x.replace('′','') for x in res]\n",
+    "        return (res[0],res[1])\n",
     "    \n",
-    "    driver.quit()\n",
-    "    print(district_name, result)\n",
-    "    return (float(result[0]), float(result[1]))\n",
+    "    res_1 = get_soup(driver.page_source)\n",
     "\n",
-    "#print(get_district_details('Мядельский'))\n"
+    "    try:\n",
+    "        soup = BeautifulSoup(driver.page_source, 'html.parser')\n",
+    "        res = soup.find_all('tr')\n",
+    "        for i in res:\n",
+    "            if i.find('th') and i.find('th').text == 'Адм. центр':\n",
+    "                wiki = i.find('a').text\n",
+    "        wiki_link2 = driver.find_element(By.LINK_TEXT, wiki)\n",
+    "        wiki_link2.click()\n",
+    "        res_2 = get_soup(driver.page_source)\n",
+    "    except:\n",
+    "        res_2 = res_1\n",
+    "        \n",
+    "\n",
+    "    driver.quit()\n",
+    "    \n",
+    "    return [(float(res_1[0]), float(res_1[1])), (float(res_2[0]), float(res_2[1]))]\n",
+    "\n",
+    "#res = get_district_details('г.Минск')\n",
+    "#res\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "page = requests.get('https://ru.wikipedia.org/wiki/%D0%93%D0%BE%D0%BC%D0%B5%D0%BB%D1%8C%D1%81%D0%BA%D0%B8%D0%B9_%D1%80%D0%B0%D0%B9%D0%BE%D0%BD')\n",
+    "soup = BeautifulSoup(page.content, 'html.parser')\n",
+    "#res = soup.find('table')\n",
+    "res = soup.find_all('tr')\n",
+    "for i in res:\n",
+    "    if i.find('th') and i.find('th').text == 'Адм. центр':\n",
+    "        wiki_link2 = i.find('a').text"
    ]
   }
  ],
