--- a/code.ipynb
+++ b/code.ipynb
@@ -32408,7 +32408,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](../map.png)"
+    "![](Countryhouse_price_prediction/map.png)\n",
+    "![](map.png)\n",
+    "![](.map.png)\n",
+    "![](../map.png)\n"
    ]
   },
   {
