--- a/code.ipynb
+++ b/code.ipynb
@@ -32408,10 +32408,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](Countryhouse_price_prediction/map.png)\n",
-    "![](map.png)\n",
-    "![](.map.png)\n",
-    "![](../map.png)\n"
+    "\n",
+    "![](map.png)"
    ]
   },
   {
