--- a/code.ipynb
+++ b/code.ipynb
@@ -32408,8 +32408,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "![](map.png)"
+    "![](/map.png?raw=true \"Objects on map\")"
    ]
   },
   {
