--- a/code.ipynb
+++ b/code.ipynb
@@ -32408,7 +32408,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](/map.png?raw=true \"Objects on map\")"
+    "![](map.png?raw=true \"Objects on map\")"
    ]
   },
   {
