--- a/code.ipynb
+++ b/code.ipynb
@@ -32408,7 +32408,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](map.png?raw=true \"Objects on map\")"
+    "\n",
+    "<img src=\"map.png\" width=\"850\" title=\"Objects in Belarus\">"
    ]
   },
   {
