--- a/code.ipynb
+++ b/code.ipynb
@@ -32408,8 +32408,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "<img src=\"map.png\" width=\"850\" title=\"Objects in Belarus\">"
+    "***see map.png in the root***"
    ]
   },
   {
